// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Iframe interface testing resize(setStateCallBack) 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Loading />
</div>
`;

exports[`UU5.Bricks.Iframe interface testing resize(setStateCallBack) 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Loading />
</div>
`;

exports[`UU5.Bricks.Iframe interface testing setSize(w,h,setStateCallBack) 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID01"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe interface testing setSize(w,h,setStateCallBack) 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID01"
  style={Object {}}
  title={null}
/>
`;
